<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.auth.LoginActivity">

    <pt.ipleiria.estg.dei.emergencysts.GradientView
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <ImageView
        android:id="@+id/btnAtras"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginVertical="20dp"
        android:layout_centerVertical="true"
        android:src="@drawable/ic_voltaratras"
        app:tint="#FFFFFF" />

    <LinearLayout
        android:id="@+id/login_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="32dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginBottom="16dp"
            app:srcCompat="@drawable/logo" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="50dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:text="@string/nome_de_utilizador"
            android:textColor="#FFFFFF"
            android:textStyle="bold" />
        <EditText
            android:id="@+id/etUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_bg"
            android:backgroundTint="#FFFFFF"
            android:hint="@string/digite_o_seu_utilizador"
            android:inputType="text"
            android:padding="12dp"
            android:textColor="#000000"
            android:textColorHint="#666666"
            android:layout_marginBottom="16dp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:text="@string/palavra_passe"
            android:textColor="#FFFFFF"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_bg"
            android:backgroundTint="#FFFFFF"
            android:hint="@string/digite_a_sua_palavra_passe"
            android:inputType="textPassword"
            android:textColor="#000000"
            android:textColorHint="#666666"
            android:padding="12dp" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:backgroundTint="#006400"
            android:padding="12dp"
            android:text="@string/login"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>
</FrameLayout>